# computer_vision

./: README.md
color_filter/: CMakeLists.txt
color_filter/src/: main.cpp  utils.cpp
color_filter/src/inc/: utils.hpp
marker_detection/: CMakeLists.txt
marker_detection/src/: main.cpp
marker_detection/src/inc/: utils.hpp
max_min_filter/: CMakeLists.txt
max_min_filter/src/: main.cpp  utils.cpp
max_min_filter/src/inc/: utils.hpp
max_min_filter/tests/: test_main.cpp
moving_object/: CMakeLists.txt
moving_object/src/: main.cpp  utils.cpp
moving_object/src/inc/: utils.hpp
moving_object/tests/: test_main.cpp
portrait_mode/: CMakeLists.txt
portrait_mode/src/: main.cpp  utils.cpp
portrait_mode/src/inc/: utils.hpp
portrait_mode/tests/: test_main.cpp
